--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
         <h5 class="text-light">Sitio Web creado por Kiki! durante el taller de Otoño Chicas Digitalers 2024</h>
     </footer>
 
+    <!--Hola soy kiki-->
+    <!--Espero que te guste la kiki web-->
+    <!--Seguime en youtube y msi demas redes-->
+    
     <!--JS bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
