Modificadas algunas imagenes

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <div class="col text-center">
                     <nav class="row">
                         <div class="col" style="margin: 1%;">
-                            <a href=""><img src="imagenes/header/Youtube.png" alt="youtube" class="HeaderImgLogo"  style="margin-top: 4%; width: 75%;"></a>
+                            <a href=""><img src="imagenes/imagenes/header/Youtube.png" alt="youtube" class="HeaderImgLogo"  style="margin-top: 4%; width: 75%;"></a>
                         </div>
 
                         <div class="col" style="margin: 1%;">
-                            <a href=""><img src="imagenes/header/Instagram.png" alt="instagram" class="HeaderImgLogo"></a>
+                            <a href=""><img src="imagenes/imagenes/header/Instagram.png" alt="instagram" class="HeaderImgLogo"></a>
                         </div>
 
                         <div class="col" style="margin: 1%">
-                            <a href=""><img src="imagenes/header/Tiktok.png" alt="tiktok" class="HeaderImgLogo"></a>
+                            <a href=""><img src="imagenes/imagenes/header/Tiktok.png" alt="tiktok" class="HeaderImgLogo"></a>
                         </div>
                     </nav>
                 </div>
@@ -52,15 +52,15 @@
                 <section class="row" style="margin: 3%;">
                     <h2 class="text-light">Proyectos principales</h2>
                     <article class="col">
-                        <img src="imagenes/ProyectosPrincipales/wall-e mascota.jpg" alt="Wall-e" class="ImgProyectosPrincipales">
+                        <img src="imagenes/imagenes/ProyectosPrincipales/wall-e mascota.jpg" alt="Wall-e" class="ImgProyectosPrincipales">
                         <p class="text-light">Wall-e</p>
                     </article>
                     <article class="col">
-                        <img src="imagenes/ProyectosPrincipales/R2D2.jpg" alt="R2D2" class="ImgProyectosPrincipales">
+                        <img src="imagenes/imagenes/ProyectosPrincipales/R2D2.jpg" alt="R2D2" class="ImgProyectosPrincipales">
                         <p class="text-light">R2D2</p>
                     </article>
                     <article  class="col">
-                        <img src="imagenes/ProyectosPrincipales/Youtube Logo.png" alt="Kiki en Youtube" class="ImgProyectosPrincipales">
+                        <img src="imagenes/imagenes/ProyectosPrincipales/Youtube Logo.png" alt="Kiki en Youtube" class="ImgProyectosPrincipales">
                         <p class="text-light">Canal</p>
                     </article>
 
@@ -70,15 +70,15 @@
                         <section id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" >
                             <div class="carousel-inner">
                                 <article class="carousel-item active">
-                                    <img src="imagenes/ProyectosPrincipales/RandomPlay.jpg" alt="RandomPlay" class="ImgProyectosPrincipales">
+                                    <img src="imagenes/imagenes/ProyectosPrincipales/RandomPlay.jpg" alt="RandomPlay" class="ImgProyectosPrincipales">
                                     <p  class="d-block w-100" >Random Play 2024</p>
                                 </article>
                                 <article class="carousel-item">
-                                    <img src="imagenes/ProyectosPrincipales/2000 subs.png" alt="2000 subs" class="ImgProyectosPrincipales">
+                                    <img src="imagenes/imagenes/ProyectosPrincipales/ProyectosPrincipales/2000 subs.png" alt="2000 subs" class="ImgProyectosPrincipales">
                                     <p  class="d-block w-100" >2000 en youtube</p>
                                 </article>
                                 <article class="carousel-item">
-                                    <img src="imagenes/ProyectosPrincipales/Practicarlos.jpg" alt="Practicarlos" class="ImgProyectosPrincipales">
+                                    <img src="imagenes/imagenes/ProyectosPrincipales/ProyectosPrincipales/Practicarlos.jpg" alt="Practicarlos" class="ImgProyectosPrincipales">
                                     <p  class="d-block w-100" >Practicarlos</p>
                                 </article>
                             </div>
@@ -190,7 +190,7 @@
     <!--Hola soy kiki-->
     <!--Espero que te guste la kiki web-->
     <!--Seguime en youtube y msi demas redes-->
-    
+
     <!--JS bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
