subidos algunos cambios

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row" style="margin: 0.1%;">
                 <div class="col" style="margin: auto;">
                     <article>
-                        <img src="imagenes/header/Logo1.png" alt="Logo Web" class="HeaderImg">
+                        <img src="imagenes/imagenes/header/Logo1.png" alt="Logo Web" class="HeaderImg">
                     </article>
                 </div>
                 <div class="col text-center">
